--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,16 @@ body {
   background-color: #f5f6fa;
 }
 
+.app {
+  display: flex;
+  justify-content: space-evenly;
+  padding: 20px;
+}
+
+.app__left {
+  flex: 0.9;
+}
+
 .app__header {
   display: flex;
   justify-content: space-between;
@@ -12,4 +22,10 @@ body {
 .app__stats {
   display: flex;
   justify-content: space-between;
+}
+
+@media (max-width: 990px) {
+  .app {
+    flex-direction: column;
+  }
 }
