--- a/src/App.css
+++ b/src/App.css
@@ -19,9 +19,29 @@ body {
   margin: 20px;
 }
 
+.app__header > h1 {
+  color: #fc3c3c;
+  font-size: 2rem;
+}
+
+.app__dropdown {
+  background-color: #fff;
+}
+
 .app__stats {
   display: flex;
   justify-content: space-between;
+}
+
+.app__info > h3 {
+  color: #6a5d5d;
+  font-weight: 400;
+  font-size: 1.5rem;
+  margin-bottom: 1rem;
+}
+
+.app__info > h3:last-of-type {
+  margin-top: 2rem;
 }
 
 @media (max-width: 990px) {
